В index и portfolio добавлено поле подписки на телеграм

--- a/portfolio.html
+++ b/portfolio.html
@@ -280,6 +280,22 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h3 class="telegram-sub-header">Подпишитесь на рассылку</h3>
+          <form class="telegram-sub-form">
+            <label>
+              <input class="telegram-sub-label" placeholder="E-mail" type="email" name="email" />
+            </label>
+            <button class="telegram-sub-button" type="submit">
+              Подписаться
+              <span>
+                <svg class="telegram-btn-logo">
+                  <use href="./img/social-links/telegram-1.svg"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
