--- a/index.html
+++ b/index.html
@@ -498,9 +498,16 @@
           <h3 class="telegram-sub-header">Подпишитесь на рассылку</h3>
           <form class="telegram-sub-form">
             <label>
-              <input class="telegram-sub-label" type="email" name="E-mail" />
+              <input class="telegram-sub-label" placeholder="E-mail" type="email" name="email" />
             </label>
-            <button class="telegram-sub-button" type="submit">Подписатся</button>
+            <button class="telegram-sub-button" type="submit">
+              Подписаться
+              <span>
+                <svg class="telegram-btn-logo">
+                  <use href="./img/social-links/telegram-1.svg"></use>
+                </svg>
+              </span>
+            </button>
           </form>
         </div>
       </div>
