Добавлена начальная разметка модалки

--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
                 <use href="./img/modal-close-btn.svg"></use>
               </svg>
             </button>
+            <h3>Оставьте свои данные, мы вам перезвоним</h3>
+            <form class="modal-input-form">
+              <label>
+                Имя
+                <input class="modal-input-field" type="" name="email" />
+              </label>
+              <label>
+                Телефон
+                <input class="modal-input-field" type="tel" name="pwd" />
+              </label>
+              <label>
+                Почта
+                <input class="modal-input-field" type="email" name="pwd" />
+              </label>
+              <textarea name="comment" rows="5" cols="45" placeholder="Оставьте комментарий"></textarea>
+            </form>
           </div>
         </div>
       </section>
