--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
           <li class="list link link-header">
             <a class="link link-header" href="mailto:info@devstudio.com">
               <svg class="mailto-svg">
-                <use href="./img/sprite.svg#envelope"></use></svg
-              >info@devstudio.com
+                <use href="./img/sprite.svg#envelope"></use>
+                </svg>info@devstudio.com
             </a>
           </li>
           <li class="list link link-header">
             <a class="link link-header" href="tel:+380961111111">
               <svg class="tel-svg">
-                <use href="./img/sprite.svg#smartphone"></use></svg
-              >+38 096 111 11 11
+                <use href="./img/sprite.svg#smartphone"></use>
+                </svg>+38 096 111 11 11
             </a>
           </li>
         </ul>
