--- a/index.html
+++ b/index.html
@@ -54,21 +54,36 @@
               <div class="modal-input-form">
                 <label class="modal-input-label">Имя</label>
                 <input class="modal-input-field" type="text" name="name" />
+                <div class="modal-input-icon">
+                  <svg width="12" height="12">
+                    <use href="./img/sprite.svg#user"></use>
+                  </svg>
+                </div>
               </div>
               <div class="modal-input-form">
                 <label class="modal-input-label">Телефон</label>
                 <input class="modal-input-field" type="tel" name="tel" />
+                <div class="modal-input-icon">
+                  <svg width="13" height="13">
+                    <use href="./img/sprite.svg#telephone"></use>
+                  </svg>
+                </div>
               </div>
               <div class="modal-input-form">
                 <label class="modal-input-label">Почта</label>
                 <input class="modal-input-field" type="email" name="email" />
+                <div class="modal-input-icon">
+                  <svg width="15" height="12">
+                    <use href="./img/sprite.svg#mail"></use>
+                  </svg>
+                </div>
               </div>
               <div class="modal-input-form">
                 <label class="modal-input-label">Комментарий</label>
                 <textarea class="modal-input-textarea" placeholder="Введите текст" name="comment" rows="6" cols="10"></textarea>
               </div>
-              <div class="modal-input-form">
-                <input class="checkbox" id="agreement" name="agreement" type="checkbox" value="agreement" />
+              <div class="modal-input-agreement">
+                <input id="agreement" name="agreement" type="checkbox" value="agreement" />
                 <label for="agreement">Соглашаюсь с рассылкой и принимаю <a class="checkbox-agr-link" href="">Условия договора</a></label>
               </div>
               <button class="modal-send-button" type="button">Отправить</button>
