--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button data-modal-close class="modal-close-button">
-              <svg width="28" height="28">
+              <svg class="close-svg" width="28" height="28">
                 <use href="./img/modal-close-btn.svg"></use>
               </svg>
             </button>
