Добавлены последние исправления модалки

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button data-modal-close class="modal-close-button">
-              <svg class="close-svg" width="28" height="28">
-                <use href="./img/modal-close-btn.svg"></use>
+              <svg width="11" height="11">
+                <use href="./img/sprite.svg#modal-close-btn"></use>
               </svg>
             </button>
             <h3 class="modal-header">Оставьте свои данные, мы вам перезвоним</h3>
             <form>
               <div class="modal-input-form">
                 <label class="modal-input-label">Имя</label>
-                <input class="modal-input-field" type="text" name="name" />
+                <input class="modal-input-field" type="text" name="user" />
                 <div class="modal-input-icon">
                   <svg width="12" height="12">
                     <use href="./img/sprite.svg#user"></use>
@@ -62,7 +62,7 @@
               </div>
               <div class="modal-input-form">
                 <label class="modal-input-label">Телефон</label>
-                <input class="modal-input-field" type="tel" name="tel" />
+                <input class="modal-input-field" type="tel" name="telephone" />
                 <div class="modal-input-icon">
                   <svg width="13" height="13">
                     <use href="./img/sprite.svg#telephone"></use>
@@ -71,7 +71,7 @@
               </div>
               <div class="modal-input-form">
                 <label class="modal-input-label">Почта</label>
-                <input class="modal-input-field" type="email" name="email" />
+                <input class="modal-input-field" type="email" name="mail" />
                 <div class="modal-input-icon">
                   <svg width="15" height="12">
                     <use href="./img/sprite.svg#mail"></use>
